--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/lodash": "^4.14.180",
     "@types/node": "^17.0.21",
+    "jest": "^27.5.1",
     "ts-node": "^10.7.0"
   }
 }
